objects/Password_Change_History__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SetupAuditId__c</fullName>
        <label>SetupAuditId</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AuditLogs_and_Resetpassword_historys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Message__c</fullName>
        <label>User Message</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>resetpassword__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>AuditLogs_and_Resetpassword_historys</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Password Change History</label>
    <listViews>
        <fullName>Nolan_Daigle_Password_Change_History</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>Rest{00000}</displayFormat>
        <label>AuditLogs and Resetpassword history Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Password Change Historys</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>